--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=mydatabase
+spring.data.mongodb.uri=mongodb+srv://guest:1234@cluster0.jwgj7.mongodb.net/orderDatabase?retryWrites=true&w=majority
+spring.data.mongodb.database=orderDatabase
